# mtg-harness

./: .gitignore  AGENTS.md  HUMAN_INPUT.md  README.md  demo.py  pyproject.toml
.github/workflows/: ci.yml
docs/: index.md
docs/architecture/: engine-layout.md  engine-package-scaffold.md  source-ingestion-strategy.md  system-overview.md
docs/contracts/: agent-workflow.md  canonical-card-model.md  card-coverage-manifest.md  card-implementation-lifecycle.md  characteristics-and-continuous-effects.md  combat-requirements-and-evasion.md  costs-and-x-values.md  deck-construction-and-game-start.md  deterministic-choices-and-hidden-zones.md  deterministic-game-setup.md  deterministic-rng-and-shuffle.md  engine-test-trace-mapping.md  game-state.md  index.md  knowledge-sources.md  legal-actions-and-targets-api.md  object-identity-and-zone-changes.md  play-engine.md  portal-expansion-order.md  portal-sorcery-expansion-wave.md  replay-event-log.md  replay-reduction.md  rules-coverage-manifest.md  rules-implementation-lifecycle.md  source-artifact-provenance.md  stack-and-priority.md  state-machine-transitions.md  support-slice-manifest.md  surface-api.md  terminal-play-surface.md  wave5-hidden-zone-expansion.md  wave6-damage-and-turn-effects.md  wave7-triggers-abilities-and-instants.md
docs/coverage/: README.md  cards.initial.yaml  rules.initial.yaml
docs/design-docs/: core-beliefs.md  future-codex-skill-card-introspection.md  support-slice-model.md
engine/: README.md  package-plan.md  test-strategy.md
information/: README.md  pull_sources.py
(+508 files in other folders)
